# Object-Oriented-Programming-Introduction

Labor3(OOP)/: CMakeLists.txt  L3_Kocsis_Antonia_DSM.cpp  L3_Kocsis_Antonia_DSM.h  L3_Kocsis_Antonia_DSM_test.cpp  compile.bat  output.txt
Labor4(OOP)/: CMakeLists.txt  Controller.cpp  Controller.h  Deposit  Fruit.cpp  Fruit.h  FruitApp.cpp  FruitRepo.cpp  FruitRepo.h  FruitUI.cpp  FruitUI.h  Tests.cpp  Tests.h  compile.bat
Labor5(OOP)/: CMakeLists.txt  Client.cpp  Client.h  ClientRepository.cpp  ClientRepository.h  ElectricScooter.cpp  ElectricScooter.h  ElectricScooterController.cpp  ElectricScooterController.h  ElectricScooterRepository.cpp  ElectricScooterRepository.h  Manager.cpp  Manager.h  ManagerDatabase  ManagerRepository.cpp  ManagerRepository.h  UI.cpp  UI.h  UserController.cpp  UserController.h  main.cpp
