cmake_minimum_required(VERSION 3.24)
project(Labor5_OOP_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Labor5_OOP_ main.cpp User.h User.cpp ClientRepository.h ManagerRepository.cpp ManagerRepository.h ClientRepository.cpp Client.cpp Client.h Manager.cpp Manager.h UI.h UI.cpp UserRepository.cpp UserRepository.h UserController.cpp UserController.h ElectricScooter.h ElectricScooter.cpp ElectricScooterRepository.h ElectricScooterRepository.cpp ElectricScooterController.cpp ElectricScooterController.h)
